Fixes docs home topic icon vertical alignment

--- a/src/styles/_topics.scss
+++ b/src/styles/_topics.scss
@@ -53,7 +53,7 @@
 	color: white;
 	font-size: 64px;
 	position: relative;
-	top: 32px;
+	top: 30px;
 }
 
 .docs-home-topics .topic {
